# gclit

./: .gitignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  pyproject.toml  requirements.txt
gclit/: __init__.py  __main__.py  container.py
gclit/application/use_cases/: generate_commit.py  generate_pr_docs.py
gclit/cli/: commands_config.py  main.py  utils.py
gclit/cli/commands/: commit.py  config.py  pr.py
gclit/cli/options/: common.py
gclit/config/: config_manager.py  settings.py
gclit/domain/exceptions/: exception.py
gclit/domain/models/: commit_message.py  common.py  pull_request.py
gclit/domain/ports/: git.py  git_port.py  git_service.py
gclit/domain/services/: git_repository.py  llm.py
gclit/infrastructure/git/: azure_devops_adapter.py  azure_devops_repository.py  base_git_adapter.py  git_diff_provider.py  git_repository.py  github_adapter.py  github_repository.py  ssh_resolver.py
gclit/infrastructure/llm/: openai_provider.py  openai_with_func_provider.py  provider_factory.py
scripts/: bump_version.py
