[project]
name = "gclit"
version = "0.1.0"
description = "Git CLI assistant powered by LLMs"
authors = [
    { name="Daren.dev", email="sdaren6@gmail.com" }
]
dependencies = [
    "typer[all]",
    "openai",
    "pydantic",
    "python-dotenv",
    "pydantic-settings",
    "requests",
]
requires-python = ">=3.8"

[project.scripts]
gclit = "gclit.cli.main:app"
